--- a/portfolio.html
+++ b/portfolio.html
@@ -336,6 +336,31 @@
             </li>
           </ul>
         </div>
+        <div class="form-subscribe">
+          <p class="offer">Підпишіться на розсилку</p>
+          <form
+            action="#"
+            name="signup_form"
+            autocomplete="on"
+            novalidate
+            class="form-footer"
+          >
+            <label>
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="input-footer"
+              />
+            </label>
+            <button type="submit" class="button-subscribe">
+              Підписатися
+              <svg class="icon-subscribe" width="24px" height="24px">
+                <use href="./imeges/sprite-opt.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
