Changes input color.

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
             <label for="agree" class="style-agree">
               <svg class="icon-check" width="16px" height="15px">
                 <use href="./imeges/sprite-opt.svg#icon-Vector-1"></use></svg
-              >Погоджуюся з розсилкою та приймаю <a class="terms"> Умови договору</a>
+              >Погоджуюся з розсилкою та приймаю <a href="" class="terms"> Умови договору</a>
             </label>
             <button type="submit" class="button-send">Відправити</button>
           </div>
